src/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root ::-webkit-scrollbar {
  width: 8px;
  background-color: transparent;
  border-left: #202020 solid 0.5px;
}
:root ::-webkit-scrollbar-thumb {
  background-color: #252525;
}
:root ::-webkit-scrollbar-thumb:hover {
  background-color: #353535;
}

:root {
  --background-color: #121212;
  font-family: "open sans";
}

html,
body {
  background-color: var(--background-color);
  color: #d0d0d0;
  font-family: "open sans";
  margin: 0;
  padding: 0;
  caret-color: white;
}

.hidden {
  display: none !important;
}

.carta-toolbar {
  width: fit-content;
  position: sticky !important;
  top: 0;
  background-color: #111 !important;
  border: 1px solid #2f4359;
  border-radius: 5px;
  z-index: 30;
  margin-left: auto;
  max-width: 300px;
}

.carta-toolbar-right {
  margin-right: 10px !important;
}

.carta-toolbar-left {
  display: none !important;
  padding-left: 15px;
  align-content: center;
}

.carta-toolbar-left button.carta-active {
  display: none;
}

a {
  color: #4493f8;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.renderer-toolbar {
  position: sticky;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 0;
  height: 32px;
  width: 140px;
  background-color: #111 !important;
  border: 1px solid #2f4359;
  border-radius: 5px;
  z-index: 30;
  margin-left: auto;
}

.carta-renderer {
  background-color: transparent !important;
}

#footnote-label {
  display: none;
}

.stats {
  position: fixed;
  bottom: 0;
  right: 0;
  width: fit-content;
  border-radius: 5px;
  z-index: 30;
  text-wrap: nowrap;
}

.carta-icons-menu {
  position: fixed !important;
  top: unset !important;
  left: 10px !important;
  width: fit-content;
  height: fit-content;
  background-color: #111 !important;
  border: 1px solid #2f4359;
  border-radius: 5px;
  padding: 10px;
  z-index: 90;
  gap: 2px;
}

.carta-icons-menu svg {
  margin-right: 10px;
}

.math-icon + span:before {
  content: "Math";
  visibility: visible;
  font-size: medium !important;
}

.math-icon + span {
  visibility: hidden;
  font-size: 0px !important;
}

@media (max-width: 768px) {
  .divider {
    display: none !important;
  }

  .renderer {
    display: none !important;
  }

  .editor {
    width: 100% !important;
    height: 100dvh;
  }

  .carta-toolbar {
    height: 50px !important;
    position: fixed !important;
    top: unset !important;
    bottom: 0 !important;
    left: 0 !important;
    right: 0 !important;
    width: 100% !important;
    max-width: unset;
    margin-left: 0 !important;
    margin-right: 0 !important;
  }

  .carta-toolbar-left {
    display: block !important;
  }

  .renderer-toolbar {
    display: none;
  }

  .theme-toggle {
    display: none;
  }

  .fullscreen-toggle {
    display: none;
  }
  .stats {
    bottom: 50px !important;
    width: 100%;
  }
  .carta-icons-menu {
    bottom: 80px !important;
    left: unset !important;
    right: 0 !important;
  }
  .carta-editor {
    margin-bottom: 70px !important;
  }
}

